--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-  <header class="header">
+  <header id="header" class="header">
     <div class="header__top">
       <div class="container">
         <div class="header__top-inner">
-          <a href="" class="logo header__logo">
+          <a href="#header" class="logo header__logo">
             <svg class="header__logo-svg header__icon-svg" width="60" height="63" viewBox="0 0 60 63" fill="none"
               xmlns="http://www.w3.org/2000/svg">
 
@@ -641,7 +641,7 @@
     </div>
   </section>
   <footer class="footer">
-    <a href="" class="logo">
+    <a href="#header" class="logo">
       <svg width="60" height="63" viewBox="0 0 60 63" fill="white" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M11.412 29.512H16.02L18.936 37.972L21.888 29.512H26.46L22.068 41.14L25.308 49.276L32.544 29.44H37.944L27.72 55H23.436L18.936 44.272L14.472 55H10.188L0 29.44H5.328L12.6 49.276L15.768 41.14L11.412 29.512Z" />
